fix: destructuring and overflow for text

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ header a {
   text-decoration: none;
   color: green;
   font-weight: 700;
+  
 }
 
 li a:hover {
@@ -27,6 +28,8 @@ li a.active {
   border-radius: 5px;
   opacity: 0;
   transition: 0.4s;
+  overflow-y: auto;
+ 
 }
 
 .card:hover .overlay{
